[package]
name = "aggreator_create"
version = "0.1.0"
edition = "2021"
description = "A media aggregator library crate"
authors = ["Raj purkait <rajpurkait9@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
